--- a/kurdish.html
+++ b/kurdish.html
@@ -467,7 +467,7 @@
     </a>
 
     <div class="container" x-data="kurdishApp()">
-        <h1 style="text-align: center; margin-bottom: 2rem; color: var(--theme-text-accent); font-size: 2.5rem; font-weight: bold;">زمانی کوردی - پیتەکان</h1>
+        <h1 style="text-align: center; margin-bottom: 2rem; color: var(--theme-text-accent); font-size: 2.5rem; font-weight: bold;"> پیتەکان</h1>
 
         <div class="grid-container">
              <!-- Loop through letters data -->
