--- a/english.html
+++ b/english.html
@@ -466,7 +466,7 @@
     </a>
 
     <div class="container" x-data="englishApp()">
-        <h1 style="text-align: center; margin-bottom: 2rem; color: var(--theme-text-accent); font-size: 2.5rem; font-weight: bold;">English Language - Alphabet</h1>
+        <h1 style="text-align: center; margin-bottom: 2rem; color: var(--theme-text-accent); font-size: 2.5rem; font-weight: bold;">Alphabet</h1>
 
         <div class="grid-container">
              <!-- Loop through letters data -->
